--- a/templates/page1.html
+++ b/templates/page1.html
@@ -180,7 +180,7 @@
     <div class="page" id="shop" style="display:none;height: 1000px;">
 
         <div style="display: flex; justify-content: center; align-items: center; height: 100px;">
-            <div class="coin" style="margin-left: 10px;">
+            <div class="coin2" style="margin-left: 10px;">
                 <img src="/static/images/coin.png" alt="Монеты" width="80">
             </div>
             <p class="score" style="margin: 0; font-size: 20px;">
@@ -208,12 +208,10 @@
                 <div class="shop_container">
                     <!-- Первая строка -->
                     <div class="shop_box">
-                        <div class="shop_discount">ЛУЧШЕЕ</div> <!-- Добавлено для метки -->
                         <div class="shop_icon">
-                            <img src="/static/images/box_1.png" alt="Сундук">
+                            <img src="/static/images/groot.png" alt="Сундук">
                         </div>
-                        <h1>Сундук героя</h1>
-                        <h2>здесь новый перс</h2>
+                        <h1>Грут</h1>
                         <div class="shop_price">
                             <img src="/static/images/coin.png" alt="coin"> <span>10000</span>
                         </div>
@@ -230,7 +228,7 @@
                     </div>
                     <div class="shop_box_3">
                         <div class="shop_icon">
-                            <img src="/static/images/box_3.png" alt="Сундук">
+                            <img src="/static/images/box_1.png" alt="Сундук">
                         </div>
                         <h1>Сундук героя</h1>
                         <h2>здесь новый перс</h2>
@@ -242,7 +240,7 @@
                     <!-- Вторая строка -->
                     <div class="shop_box_4">
                         <div class="shop_icon">
-                            <img src="/static/images/box_3.png" alt="Сундук">
+                            <img src="/static/images/box_1.png" alt="Сундук">
                         </div>
                         <h1>Сундук мастера</h1>
                         <h2>содержит редкий лут</h2>
@@ -252,7 +250,7 @@
                     </div>
                     <div class="shop_box_5">
                         <div class="shop_icon">
-                            <img src="/static/images/box_3.png" alt="Сундук">
+                            <img src="/static/images/box_1.png" alt="Сундук">
                         </div>
                         <h1>Сундук мастера</h1>
                         <h2>содержит редкий лут</h2>
@@ -262,7 +260,7 @@
                     </div>
                     <div class="shop_box_6">
                         <div class="shop_icon">
-                            <img src="/static/images/box_3.png" alt="Сундук">
+                            <img src="/static/images/box_1.png" alt="Сундук">
                         </div>
                         <h1>Сундук мастера</h1>
                         <h2>содержит редкий лут</h2>
@@ -286,86 +284,86 @@
                 </div>
                 <button id="select-button">Выбрать</button>
                 <div class="menu_char">
-                    <div class="character" data-id="1" data-name="Character 1" data-img="/static/images/croco.png"
+                    <div class="character char-1" data-id="1" data-name="Character 1" data-img="/static/images/croco.png"
                          data-description="Каждый приглашенный друг дает +1000 монет">
                         <img src="/static/images/croco.png" alt="Character 1">
                         <p>Character 1</p>
                     </div>
-                    <div class="character " data-id="2" data-name="Character 2" data-img="/static/images/cot.png"
+                    <div class="character char-1" data-id="2" data-name="Character 2" data-img="/static/images/cot.png"
                          data-description="Кот играет на гитаре, удваивая количество получаемых монет на 5 мин">
                         <img src="/static/images/cot.png" alt="Character 2">
                         <p>Character 2</p>
                     </div>
-                    <div class="character " data-id="3" data-name="Character 3"
+                    <div class="character char-1" data-id="3" data-name="Character 3"
                          data-img="/static/images/groot.png" data-description="Восстанавливает энергию на 10% быстрее">
                         <img src="/static/images/groot.png" alt="Character 3">
                         <p>Character 3</p>
                     </div>
-                    <div class="character " data-id="4" data-name="Character 4"
+                    <div class="character char-1" data-id="4" data-name="Character 4"
                          data-img="/static/images/golem.png"
                          data-description="Голем Базя позволяет крутить рулетку 2 раза">
                         <img src="/static/images/golem.png" alt="Character 4">
                         <p>Character 4</p>
                     </div>
-                    <div class="character " data-id="5" data-name="Character 5" data-img="/static/images/fire.png"
+                    <div class="character char-1" data-id="5" data-name="Character 5" data-img="/static/images/fire.png"
                          data-description="Fire is a blazing warrior full of passion.">
                         <img src="/static/images/fire.png" alt="Character 5">
                         <p>Character 5</p>
                     </div>
-                    <div class="character " data-id="6" data-name="Character 6"
+                    <div class="character char-6" data-id="6" data-name="Character 6"
                          data-img="/static/images/water.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/water.png" alt="Character 6">
                         <p>Character 6</p>
                     </div>
-                    <div class="character " data-id="7" data-name="Character 7" data-img="/static/images/tor.png"
+                    <div class="character char-6" data-id="7" data-name="Character 7" data-img="/static/images/tor.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/tor.png" alt="Character 7">
                         <p>Character 7</p>
                     </div>
-                    <div class="character " data-id="8" data-name="Character 8"
+                    <div class="character char-6" data-id="8" data-name="Character 8"
                          data-img="/static/images/witch.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/witch.png" alt="Character 8">
                         <p>Character 8</p>
                     </div>
-                    <div class="character " data-id="9" data-name="Character 9"
+                    <div class="character char-6" data-id="9" data-name="Character 9"
                          data-img="/static/images/angel.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/angel.png" alt="Character 9">
                         <p>Character 9</p>
                     </div>
-                    <div class="character " data-id="10" data-name="Character 10"
+                    <div class="character char-6" data-id="10" data-name="Character 10"
                          data-img="/static/images/ananas.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/ananas.png" alt="Character 10">
                         <p>Character 10</p>
                     </div>
-                    <div class="character " data-id="11" data-name="Character 11"
+                    <div class="character char-6" data-id="11" data-name="Character 11"
                          data-img="/static/images/frog.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/frog.png" alt="Character 11">
                         <p>Character 11</p>
                     </div>
-                    <div class="character " data-id="12" data-name="Character 12"
+                    <div class="character char-12" data-id="12" data-name="Character 12"
                          data-img="/static/images/leon.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/leon.png" alt="Character 12">
                         <p>Character 12</p>
                     </div>
-                    <div class="character" data-id="13" data-name="Character 13"
+                    <div class="character char-12" data-id="13" data-name="Character 13"
                          data-img="/static/images/syth.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/syth.png" alt="Character 13">
                         <p>Character 13</p>
                     </div>
-                    <div class="character " data-id="14" data-name="Character 14"
+                    <div class="character char-12" data-id="14" data-name="Character 14"
                          data-img="/static/images/cat.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/cat.png" alt="Character 14">
                         <p>Character 14</p>
                     </div>
-                    <div class="character " data-id="15" data-name="Character 15"
+                    <div class="character char-12" data-id="15" data-name="Character 15"
                          data-img="/static/images/minion.png"
                          data-description="Water is calm and adaptable, flowing through challenges.">
                         <img src="/static/images/minion.png" alt="Character 15">
